--- a/src/components/hero.scss
+++ b/src/components/hero.scss
@@ -7,6 +7,11 @@
     font-size: 4rem;
     font-weight: 300;
     margin: 0;
+    text-align: center;
+
+    .whats-up {
+      font-size: 150%;
+    }
 
     &.subheading {
       font-size: 1.5rem;
