--- a/src/components/nav.scss
+++ b/src/components/nav.scss
@@ -52,25 +52,222 @@
 .nav-wrapper {
   text-align: right;
 
-  ul {
-    list-style-type: none;
-    padding: 0;
+  .menu-button {
+    padding: 2rem;
+    display: inline-block;
+    cursor: pointer;
+    z-index: 3;
+    position: fixed;
+    right: 0;
+    top: 1rem;
 
-    li {
-      display: inline-block;
-      padding: 0 .5rem;
+    span {
+      display: block;
+      height: 10px;
+      margin: 0 auto 10px auto;
+      background: $black;
+      transition: .3s all;
+      position: relative;
 
-      a {
-        display: block;
-        padding: .5rem;
-        text-decoration: none;
-        color: $black;
-        font-weight: bold;
-        transition: .3s all;
+      &:first-of-type {
+        width: 6rem;
+      }
 
-        &:hover {
-          color: $blue;
+      &:nth-of-type(2) {
+        width: 8rem;
+      }
+
+      &:last-of-type {
+        width: 6rem;
+        margin-bottom: 0;
+      }
+    }
+
+    &:hover {
+      span {
+        &:first-of-type {
+          width: 8rem;
         }
+
+        &:last-of-type {
+          width: 8rem;
+        }
+      }
+    }
+  }
+
+  .link-wrapper {
+    background: $cream;
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    font-size: 200%;
+    z-index: 1;
+    transition: .3s clip-path;
+    clip-path: circle(0 at center);
+    padding-top: 3rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+
+    .bigger {
+      font-size: 125%;
+    }
+
+    .heading {
+      padding-left: 1.5rem;
+      position: relative;
+
+      &:before {
+        content: '';
+        display: block;
+        height: 2rem;
+        width: 0.5rem;
+        background: $blue;
+        position: absolute;
+        left: 0;
+        top: 0;
+      }
+    }
+
+    p, ul {
+      text-align: left;
+    }
+
+    ul {
+      list-style-type: none;
+      padding-left: 1.5rem;
+
+      li {
+        display: inline-block;
+
+        a {
+          display: block;
+          text-decoration: none;
+          color: $black;
+          transition: .3s all;
+
+          &:hover {
+            color: $blue;
+          }
+        }
+      }
+    }
+  }
+
+  &.active {
+    .menu-button {
+      span {
+        &:first-of-type {
+          rotate: 45deg;
+          width: 4rem;
+          left: 2.1rem;
+        }
+
+        &:nth-of-type(2) {
+          width: 7rem;
+        }
+
+        &:last-of-type {
+          rotate: -45deg;
+          width: 4rem;
+          left: 2.1rem;
+        }
+      }
+    }
+
+    .link-wrapper {
+      clip-path: circle(60% at 60% 50%);
+    }
+  }
+}
+
+@media screen and (max-width: 1800px) {
+  .nav-wrapper {
+    .link-wrapper {
+      padding-top: 8rem;
+    }
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .nav-wrapper.active {
+    .link-wrapper {
+      clip-path: circle(70% at 60% 50%);
+    }
+  }
+}
+
+@media screen and (max-width: 645px) {
+  .logo-wrapper {
+    h1 {
+      font-size: 2rem;
+      padding-left: 1.5rem;
+      margin-left: 0;
+
+      span {
+        font-size: 1.5rem;
+      }
+    }
+  }
+
+  .nav-wrapper {
+    .link-wrapper {
+      padding-top: 4rem;
+      font-size: 160%;
+    }
+
+    .menu-button {
+      padding: 1rem;
+      top: 1.75rem;
+
+      span {
+        height: 6px;
+        margin-bottom: 0;
+
+        &:first-of-type {
+          top: -0.55rem;
+          width: 4rem;
+        }
+
+        &:nth-of-type(2) {
+          width: 6rem;
+        }
+
+        &:last-of-type {
+          top: 0.55rem;
+          width: 4rem;
+          margin-bottom: 0;
+        }
+      }
+
+      &:hover span {
+        &:first-of-type {
+          width: 6rem;
+        }
+
+        &:last-of-type {
+          width: 6rem;
+        }
+      }
+    }
+
+    &.active .menu-button span {
+      &:first-of-type {
+        rotate: 45deg;
+        width: 2.5rem;
+        top: -.4rem;
+      }
+
+      &:nth-of-type(2) {
+        width: 6rem;
+      }
+
+      &:last-of-type {
+        rotate: -45deg;
+        width: 2.5rem;
+        top: .4rem;
       }
     }
   }
