--- a/src/components/heading.scss
+++ b/src/components/heading.scss
@@ -15,3 +15,36 @@
     }
   }
 }
+
+@media screen and (max-width: 1170px) {
+  .heading-container {
+    h2 {
+      font-size: 3rem;
+    }
+
+    .divider {
+      height: 1.5rem;
+    }
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .heading-container {
+    margin-bottom: 1rem;
+
+    h2 {
+      font-size: 2rem;
+
+      &.subheading {
+        font-size: 1.25rem;
+        position: relative;
+        top: -1rem;
+      }
+    }
+
+    .divider {
+      height: 1rem;
+      margin-top: 1rem;
+    }
+  }
+}
