--- a/src/components/hero.scss
+++ b/src/components/hero.scss
@@ -2,12 +2,14 @@
 
 #hero {
   padding: 18rem 0;
+  overflow: hidden;
 
   h2 {
     font-size: 4rem;
     font-weight: 300;
     margin: 0;
     text-align: center;
+    max-width: 100%;
 
     .whats-up {
       font-size: 150%;
@@ -32,20 +34,28 @@
   }
 }
 
-@keyframes fadeInOut {
-  0% {
-    opacity: 0;
-  }
+@media screen and (max-width: 800px) {
+  #hero {
+    padding: 8rem 0;
 
-  25% {
-    opacity: 1;
+    h2 {
+      font-size: 3rem;
+    }
   }
+}
 
-  75% {
-    opacity: 1;
+@media screen and (max-width: 560px) {
+  #hero {
+    h2 {
+      font-size: 2.5rem;
+    }
   }
+}
 
-  100% {
-    opacity: 0;
+@media screen and (max-width: 500px) {
+  #hero {
+    h2 {
+      font-size: 1.75rem;
+    }
   }
 }
