--- a/src/components/nav.scss
+++ b/src/components/nav.scss
@@ -2,6 +2,7 @@
 
 .navigation {
   padding: 1rem 0;
+  background-color: $white;
 }
 
 .logo-wrapper {
@@ -57,9 +58,8 @@
     display: inline-block;
     cursor: pointer;
     z-index: 3;
-    position: fixed;
+    position: relative;
     right: 0;
-    top: 1rem;
 
     span {
       display: block;
@@ -97,6 +97,7 @@
   }
 
   .link-wrapper {
+    overflow: scroll;
     background: $cream;
     position: fixed;
     right: 0;
@@ -140,7 +141,7 @@
       padding-left: 1.5rem;
 
       li {
-        display: inline-block;
+        margin-bottom: 1rem;
 
         a {
           display: block;
@@ -219,9 +220,6 @@
     }
 
     .menu-button {
-      padding: 1rem;
-      top: 1.75rem;
-
       span {
         height: 6px;
         margin-bottom: 0;
@@ -269,6 +267,24 @@
         width: 2.5rem;
         top: .4rem;
       }
+    }
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .logo-wrapper {
+    h1 {
+      font-size: 1.5rem;
+
+      span {
+        font-size: 1.25rem;
+      }
+    }
+  }
+
+  .nav-wrapper {
+    .menu-button {
+      padding: 1.5rem;
     }
   }
 }
