--- a/src/components/work.scss
+++ b/src/components/work.scss
@@ -1,32 +1,31 @@
 @import '../variables';
 
+#work {
+  padding-left: .5rem;
+  padding-right: .5rem;
+  max-width: 100%;
+}
+
 .work-item {
   font-size: 125%;
   margin-bottom: 5rem;
 
   .project-title {
     position: relative;
-    padding-left: 1.5rem;
     margin-bottom: 2rem;
-
-    &:before {
-      content: '';
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 0.5rem;
-      height: 100%;
-      background: $blue;
-    }
 
     h3 {
       margin-bottom: 0;
+      margin-top: 0;
+      font-size: 3rem;
     }
 
     h4 {
       margin-bottom: 0;
       margin-top: .5rem;
       font-weight: 300;
+      font-style: italic;
+      font-size: 1.5rem;
     }
   }
 
@@ -42,6 +41,7 @@
 
 .work-grid  {
   font-size: 125%;
+  max-width: 100%;
 
   p {
     font-weight: bold;
