--- a/src/components/nav.scss
+++ b/src/components/nav.scss
@@ -286,5 +286,78 @@
     .menu-button {
       padding: 1.5rem;
     }
+
+    .menu-button {
+      height: 6px;
+      margin-bottom: 0;
+
+      span {
+        height: 6px;
+        margin-bottom: 0;
+
+        &:first-of-type {
+          top: -0.55rem;
+          width: 2.5rem;
+        }
+
+        &:nth-of-type(2) {
+          width: 4rem;
+        }
+
+        &:last-of-type {
+          top: 0.55rem;
+          width: 2.5rem;
+          margin-bottom: 0;
+        }
+      }
+
+      &:hover span {
+        &:first-of-type {
+          width: 4rem;
+        }
+
+        &:last-of-type {
+          width: 4rem;
+        }
+      }
+    }
+
+    &.active .menu-button span {
+      &:first-of-type {
+        rotate: 45deg;
+        width: 2rem;
+        top: -.25rem;
+        left: 1.5rem;
+      }
+
+      &:nth-of-type(2) {
+        width: 4rem;
+      }
+
+      &:last-of-type {
+        rotate: -45deg;
+        width: 2rem;
+        top: .2rem;
+        left: 1.5rem;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .logo-wrapper {
+    h1 {
+      font-size: 1.25rem;
+
+      span {
+        font-size: 1rem;
+      }
+    }
+  }
+
+  .nav-wrapper {
+    .menu-button {
+      padding: 1.5rem 0;
+    }
   }
 }
